# edu_gl

./: CMakeLists.txt  LICENSE  ShaderLoader.cpp  ShaderLoader.h  israel.cpp  vcpkg.json
shaders/: simple.frag.glsl
